--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@tanstack/react-query": "^5.59.15",
         "@tanstack/react-query-devtools": "^5.59.9",
         "antd": "^5.22.6",
+        "jwt-decode": "^4.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
