--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-react": "^9.4.0",
         "@headlessui/react": "^2.1.8",
         "@heroicons/react": "^2.1.5",
         "@tanstack/react-query": "^5.59.15",
         "@tanstack/react-query-devtools": "^5.59.9",
         "antd": "^5.22.6",
+        "ckeditor5": "^44.1.0",
+        "formik": "^2.4.6",
         "jwt-decode": "^4.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -22,7 +25,8 @@
         "react-infinite-scroll-component": "^6.1.0",
         "react-loader-spinner": "^6.1.6",
         "react-router-dom": "^6.26.2",
-        "react-spinners": "^0.14.1"
+        "react-spinners": "^0.14.1",
+        "react-toastify": "^11.0.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
