--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@heroicons/react": "^2.1.5",
         "@tanstack/react-query": "^5.59.15",
         "@tanstack/react-query-devtools": "^5.59.9",
+        "@tinymce/tinymce-react": "^5.1.1",
         "antd": "^5.22.6",
         "ckeditor5": "^44.1.0",
         "formik": "^2.4.6",
@@ -26,6 +27,8 @@
         "react-loader-spinner": "^6.1.6",
         "react-router-dom": "^6.26.2",
         "react-spinners": "^0.14.1",
+        "react-tag-input-component": "^2.0.2",
+        "react-tagsinput": "^3.20.3",
         "react-toastify": "^11.0.3"
     },
     "devDependencies": {
