--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@ckeditor/ckeditor5-react": "^9.4.0",
         "@headlessui/react": "^2.1.8",
         "@heroicons/react": "^2.1.5",
+        "@tanstack/react-form": "^0.41.3",
         "@tanstack/react-query": "^5.59.15",
         "@tanstack/react-query-devtools": "^5.59.9",
         "@tinymce/tinymce-react": "^5.1.1",
