--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@tinymce/tinymce-react": "^5.1.1",
         "antd": "^5.22.6",
         "ckeditor5": "^44.1.0",
+        "dompurify": "^3.2.3",
         "formik": "^2.4.6",
         "jwt-decode": "^4.0.0",
         "react": "^18.3.1",
