--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "react-spinners": "^0.14.1",
         "react-tag-input-component": "^2.0.2",
         "react-tagsinput": "^3.20.3",
-        "react-toastify": "^11.0.3"
+        "react-toastify": "^11.0.3",
+        "slugify": "^1.6.6"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
