--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-icons": "^5.3.0",
         "react-infinite-scroll-component": "^6.1.0",
         "react-loader-spinner": "^6.1.6",
+        "react-otp-input": "^3.1.1",
         "react-router-dom": "^6.26.2",
         "react-spinners": "^0.14.1",
         "react-tag-input-component": "^2.0.2",
